adding tests also fixing the "could not create Api instance" error